--- a/src/index.njk
+++ b/src/index.njk
@@ -54,7 +54,7 @@
                             {% include 'partials/expand.svg.njk' %}
                             <p class="card-text">A non-linear notebook implemented as a single web page, a powerful free-form hypertext platform, a blank canvas for representing any associative concept in the browser.</p>
                             <a href="./public/m14-tiddlywiki.html" class="btn btn-outline-primary">Download HTML</a>
-                            <p class="small">Save the provied HTML file to your computer and open it in any web browser, or simply navigate to it.</p>
+                            <p class="small">Save the provided HTML file to your computer and open it in any web browser, or simply navigate to it.</p>
                         </div>
                     </div>
                 </div>
