For lg and md breakpoints, made the inner content of the cards column flex containers, which puts the buttons below the text.

--- a/src/index.njk
+++ b/src/index.njk
@@ -27,7 +27,7 @@
             <section class="row mt-5" id="cards">
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 shadow-sm">
-                        <div class="card-body d-inline-flex">
+                        <div class="card-body d-inline-flex flex-xl-row flex-lg-column flex-md-column justify-content-md-between">
                             <div class="card-inner-txt">
                                 <h3 class="card-title h4">Logseq</h3>
                                 {% include 'partials/expand.svg.njk' %}
@@ -40,7 +40,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 shadow-sm">
-                        <div class="card-body d-inline-flex">
+                        <div class="card-body d-inline-flex flex-xl-row flex-lg-column flex-md-column justify-content-md-between">
                             <div class="card-inner-txt">
                                 <h3 class="card-title h4">Obsidian</h3>
                                 {% include 'partials/expand.svg.njk' %}
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card h-100 shadow-sm">
-                        <div class="card-body d-inline-flex">
+                        <div class="card-body d-inline-flex flex-xl-row flex-lg-column flex-md-column justify-content-md-between">
                             <div class="card-inner-txt">
                                 <h3 class="card-title h4">TiddlyWiki</h3>
                                 {% include 'partials/expand.svg.njk' %}
